--- a/index.html
+++ b/index.html
@@ -2,111 +2,170 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>姿勢＋深度検出</title>
+  <title>姿勢＋深度検出（Depth-Anything版）</title>
   <style>
-    body { font-size:20px; display:flex; flex-direction:column;
-           align-items:center; justify-content:center; height:100vh; margin:0; text-align:center; }
-    #content { display:flex; gap:10px; margin-top:10px; }
-    video, canvas { width:320px; height:240px; border:1px solid #aaa; }
-    #output { white-space:pre-line; margin:10px; }
-    #warning { font-size:24px; font-weight:bold; }
+    body {
+      font-size: 20px; display: flex; flex-direction: column;
+      align-items: center; justify-content: center;
+      height: 100vh; margin: 0; text-align: center;
+    }
+    #content {
+      display: flex; gap: 10px; margin-top: 10px;
+    }
+    video, canvas {
+      width: 360px; height: 640px; border: 1px solid #aaa; transform: scaleX(-1);
+    }
+    #output { white-space: pre-line; margin: 10px; }
+    #warning { font-size: 24px; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>姿勢＋深度検出</h1>
+  <h1>姿勢＋深度検出（Depth-Anything版）</h1>
   <button id="startBtn">開始</button>
   <div id="output">準備中...</div>
   <div id="warning"></div>
   <div id="content">
     <video id="video" autoplay playsinline muted></video>
     <canvas id="canvas"></canvas>
-    <canvas id="depthCanvas"></canvas>
+    <canvas id="depthCanvas" style="display:none;"></canvas>
   </div>
 
-  <!-- 必要なライブラリ -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/depth-estimation"></script>
+  <!-- ライブラリ -->
+  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
   <script type="module">
-  const video = document.getElementById('video');
-  const canvas = document.getElementById('canvas');
-  const depthCanvas = document.getElementById('depthCanvas');
-  const ctx = canvas.getContext('2d');
-  const dctx = depthCanvas.getContext('2d');
-  const out = document.getElementById('output');
-  const warn = document.getElementById('warning');
-  let pitch=0, roll=0;
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const depthCanvas = document.getElementById('depthCanvas');
+    const ctx = canvas.getContext('2d');
+    const dctx = depthCanvas.getContext('2d');
+    const out = document.getElementById('output');
+    const warn = document.getElementById('warning');
+    let session;
+    let pitch = 0, roll = 0;
+    let processing = false, lastTimestamp = 0;
 
-  window.addEventListener('deviceorientation', e => {
-    pitch = e.beta ?? 0;
-    roll = e.gamma ?? 0;
-  });
+    window.addEventListener('deviceorientation', e => {
+      pitch = e.beta ?? 0;
+      roll = e.gamma ?? 0;
+    });
 
-  async function initDepth() {
-    await tf.setBackend('webgl');
-    return await depthEstimation.createEstimator(depthEstimation.SupportedModels.ARPortraitDepth);
-  }
-
-  const faceMesh = new FaceMesh({
-    locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/${f}`
-  });
-  faceMesh.setOptions({maxNumFaces:1, minDetectionConfidence:0.5, minTrackingConfidence:0.5});
-  faceMesh.onResults(onFace);
-
-  async function onFace(results) {
-    if (!results.multiFaceLandmarks) {
-      out.textContent = `傾き: ${pitch.toFixed(1)}°, ${roll.toFixed(1)}°\n顔未検出`;
-      warn.textContent="顔が検出できません"; warn.style.color='red';
-      return;
+    async function initDepthAnything() {
+      session = await ort.InferenceSession.create("depth-anything.onnx");
     }
-    ctx.drawImage(results.image,0,0,canvas.width,canvas.height);
-    const lm = results.multiFaceLandmarks[0];
-    const nose = lm[1], chin = lm[152];
-    const yDiff = chin.y - nose.y;
-    const dir = yDiff < 0.13 ? '下を向き' : yDiff > 0.19 ? '上を向き' : 'まっすぐ';
-    const bent = pitch <= 40 ? (dir !== '上') : (dir === '下');
 
-    // 深度推定
-    const depthMap = await estimator.estimateDepth(video, {minDepth:0, maxDepth:1});
-    const depthImg = await depthMap.toCanvasImageSource();
-    dctx.drawImage(depthImg,0,0,depthCanvas.width,depthCanvas.height);
+    async function estimateDepth(video) {
+      const size = 256;
+      const tmpCanvas = document.createElement('canvas');
+      tmpCanvas.width = tmpCanvas.height = size;
+      const tmpCtx = tmpCanvas.getContext('2d');
+      tmpCtx.drawImage(video, 0, 0, size, size);
+      const imgData = tmpCtx.getImageData(0, 0, size, size);
 
-    // ROI深度平均（鼻周辺20×20px）
-    const ix = Math.floor(nose.x * depthCanvas.width);
-    const iy = Math.floor(nose.y * depthCanvas.height);
-    const imgData = dctx.getImageData(ix-10, iy-10,20,20).data;
-    let sum=0,c=0;
-    for (let i=0;i<imgData.length;i+=4){ sum += imgData[i]; c++; }
-    const avg = sum/c;
+      const input = new ort.Tensor("float32", new Float32Array(3 * size * size), [1, 3, size, size]);
+      for (let i = 0; i < size * size; i++) {
+        input.data[i] = imgData.data[i * 4] / 255;              // R
+        input.data[i + size * size] = imgData.data[i * 4 + 1] / 255;  // G
+        input.data[i + 2 * size * size] = imgData.data[i * 4 + 2] / 255; // B
+      }
+      const result = await session.run({ "image": input });
+      return result[Object.keys(result)[0]].data;
+    }
 
-    out.textContent =
-      `Pitch: ${pitch.toFixed(1)}° Roll: ${roll.toFixed(1)}°\n顔: ${dir}\n距離指標: ${avg.toFixed(1)}`;
-    let msg = bent ? '首が曲がっています\n' : '首は自然です\n';
-    msg += avg < 50 ? '近すぎます' : avg > 200 ? '離れすぎています' : '適切な距離です';
-    warn.textContent = msg;
-    warn.style.color = bent || avg < 50 || avg > 200 ? 'red':'green';
-  }
+    const faceMesh = new FaceMesh({
+      locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/${f}`
+    });
+    faceMesh.setOptions({
+      maxNumFaces: 1,
+      refineLandmarks: true,
+      minDetectionConfidence: 0.5,
+      minTrackingConfidence: 0.3
+    });
+    faceMesh.onResults(onFace);
 
-  let estimator;
-  async function start() {
-    estimator = await initDepth();  // tfjs MiDaSモデル読み込み :contentReference[oaicite:1]{index=1}
-    const stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:'user'}});
-    video.srcObject = stream;
-    await new Promise(r=>video.onloadedmetadata=r);
-    canvas.width = depthCanvas.width = video.videoWidth;
-    canvas.height = depthCanvas.height = video.videoHeight;
-    new Camera(video, {
-      onFrame: async () => { await faceMesh.send({image:video}); },
-      width: video.videoWidth,
-      height: video.videoHeight
-    }).start();
-    startBtn.style.display='none';
-  }
+    async function onFace(results) {
+      if (processing) return;
+      processing = true;
 
-  document.getElementById('startBtn').onclick = start;
+      try {
+        const now = Date.now();
+        if (now - lastTimestamp < 150) {
+          processing = false;
+          return;
+        }
+        lastTimestamp = now;
+
+        if (!results.multiFaceLandmarks || results.multiFaceLandmarks.length === 0) {
+          out.textContent = `傾き: ${pitch.toFixed(1)}°, ${roll.toFixed(1)}°\n顔未検出`;
+          warn.textContent = "顔が検出できません";
+          warn.style.color = 'red';
+          processing = false;
+          return;
+        }
+
+        ctx.drawImage(results.image, 0, 0);
+
+        const depthData = await estimateDepth(video);
+        const dW = 256, dH = 256;
+        depthCanvas.width = dW;
+        depthCanvas.height = dH;
+        const img = dctx.createImageData(dW, dH);
+        for (let i = 0; i < depthData.length; i++) {
+          const val = Math.floor(depthData[i] * 255);
+          img.data[i * 4 + 0] = val;
+          img.data[i * 4 + 1] = val;
+          img.data[i * 4 + 2] = val;
+          img.data[i * 4 + 3] = 255;
+        }
+        dctx.putImageData(img, 0, 0);
+
+        const lm = results.multiFaceLandmarks[0];
+        const nose = lm[1], chin = lm[152];
+        const yDiff = chin.y - nose.y;
+        const dir = yDiff < 0.13 ? '下を向き' : yDiff > 0.19 ? '上を向き' : 'まっすぐ';
+        const bent = pitch <= 40 ? (dir !== '上') : (dir === '下');
+
+        const ix = Math.floor(nose.x * dW);
+        const iy = Math.floor(nose.y * dH);
+        const safeX = Math.max(0, Math.min(ix - 10, dW - 20));
+        const safeY = Math.max(0, Math.min(iy - 10, dH - 20));
+        const imgData = dctx.getImageData(safeX, safeY, 20, 20).data;
+
+        let sum = 0;
+        for (let i = 0; i < imgData.length; i += 4) sum += imgData[i];
+        const avg = sum / (imgData.length / 4);
+
+        out.textContent =
+          `Pitch: ${pitch.toFixed(1)}° Roll: ${roll.toFixed(1)}°\n顔: ${dir}\n距離指標: ${avg.toFixed(1)}`;
+        let msg = bent ? '首が曲がっています\n' : '首は自然です\n';
+        msg += avg < 50 ? '近すぎます' : avg > 200 ? '離れすぎています' : '適切な距離です';
+        warn.textContent = msg;
+        warn.style.color = (bent || avg < 50 || avg > 200) ? 'red' : 'green';
+      } catch (e) {
+        console.error("推論エラー:", e);
+      } finally {
+        processing = false;
+      }
+    }
+
+    document.getElementById('startBtn').onclick = async () => {
+      await initDepthAnything();
+      const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' } });
+      video.srcObject = stream;
+      await new Promise(r => video.onloadedmetadata = r);
+      canvas.width = 360;
+      canvas.height = 640;
+
+      new Camera(video, {
+        onFrame: async () => await faceMesh.send({ image: video }),
+        width: 640,
+        height: 360
+      }).start();
+
+      document.getElementById('startBtn').style.display = 'none';
+    };
   </script>
 </body>
 </html>
