--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>姿勢＋深度検出（Depth-Anything版）</title>
+  <title>姿勢＋深度検出 完全版（深度表示あり）</title>
   <style>
     body {
       font-size: 20px; display: flex; flex-direction: column;
@@ -12,26 +12,29 @@
     #content {
       display: flex; gap: 10px; margin-top: 10px;
     }
-    video, canvas {
-      width: 360px; height: 640px; border: 1px solid #aaa; transform: scaleX(-1);
+    video, canvas  {
+      width: 360px; height: 640px; border: 1px solid #aaa;
+      transform: scaleX(-1);
     }
     #output { white-space: pre-line; margin: 10px; }
     #warning { font-size: 24px; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>姿勢＋深度検出（Depth-Anything版）</h1>
+  <h1>姿勢＋深度検出 完全版（深度表示あり）</h1>
   <button id="startBtn">開始</button>
   <div id="output">準備中...</div>
   <div id="warning"></div>
   <div id="content">
     <video id="video" autoplay playsinline muted></video>
     <canvas id="canvas"></canvas>
-    <canvas id="depthCanvas" style="display:none;"></canvas>
+    <canvas id="depthCanvas"></canvas> <!-- ← 表示に変更 -->
   </div>
 
-  <!-- ライブラリ -->
-  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
+  <!-- ライブラリ読み込み -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-segmentation"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/depth-estimation"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
@@ -43,35 +46,22 @@
     const dctx = depthCanvas.getContext('2d');
     const out = document.getElementById('output');
     const warn = document.getElementById('warning');
-    let session;
     let pitch = 0, roll = 0;
-    let processing = false, lastTimestamp = 0;
+    let estimator;
+    let lastTimestamp = 0;
+    let processing = false;
 
     window.addEventListener('deviceorientation', e => {
       pitch = e.beta ?? 0;
       roll = e.gamma ?? 0;
     });
 
-    async function initDepthAnything() {
-      session = await ort.InferenceSession.create("depth-anything.onnx");
-    }
-
-    async function estimateDepth(video) {
-      const size = 256;
-      const tmpCanvas = document.createElement('canvas');
-      tmpCanvas.width = tmpCanvas.height = size;
-      const tmpCtx = tmpCanvas.getContext('2d');
-      tmpCtx.drawImage(video, 0, 0, size, size);
-      const imgData = tmpCtx.getImageData(0, 0, size, size);
-
-      const input = new ort.Tensor("float32", new Float32Array(3 * size * size), [1, 3, size, size]);
-      for (let i = 0; i < size * size; i++) {
-        input.data[i] = imgData.data[i * 4] / 255;              // R
-        input.data[i + size * size] = imgData.data[i * 4 + 1] / 255;  // G
-        input.data[i + 2 * size * size] = imgData.data[i * 4 + 2] / 255; // B
-      }
-      const result = await session.run({ "image": input });
-      return result[Object.keys(result)[0]].data;
+    async function initDepth() {
+      await tf.setBackend('webgl');
+      await tf.ready();
+      return await depthEstimation.createEstimator(
+        depthEstimation.SupportedModels.ARPortraitDepth
+      );
     }
 
     const faceMesh = new FaceMesh({
@@ -97,6 +87,7 @@
         }
         lastTimestamp = now;
 
+        // 顔未検出時の処理
         if (!results.multiFaceLandmarks || results.multiFaceLandmarks.length === 0) {
           out.textContent = `傾き: ${pitch.toFixed(1)}°, ${roll.toFixed(1)}°\n顔未検出`;
           warn.textContent = "顔が検出できません";
@@ -106,20 +97,9 @@
         }
 
         ctx.drawImage(results.image, 0, 0);
-
-        const depthData = await estimateDepth(video);
-        const dW = 256, dH = 256;
-        depthCanvas.width = dW;
-        depthCanvas.height = dH;
-        const img = dctx.createImageData(dW, dH);
-        for (let i = 0; i < depthData.length; i++) {
-          const val = Math.floor(depthData[i] * 255);
-          img.data[i * 4 + 0] = val;
-          img.data[i * 4 + 1] = val;
-          img.data[i * 4 + 2] = val;
-          img.data[i * 4 + 3] = 255;
-        }
-        dctx.putImageData(img, 0, 0);
+        const depthMap = await estimator.estimateDepth(video, { minDepth: 0, maxDepth: 1 });
+        const depthImg = await depthMap.toCanvasImageSource();
+        dctx.drawImage(depthImg, 0, 0);  // ← 深度表示
 
         const lm = results.multiFaceLandmarks[0];
         const nose = lm[1], chin = lm[152];
@@ -127,45 +107,5 @@
         const dir = yDiff < 0.13 ? '下を向き' : yDiff > 0.19 ? '上を向き' : 'まっすぐ';
         const bent = pitch <= 40 ? (dir !== '上') : (dir === '下');
 
-        const ix = Math.floor(nose.x * dW);
-        const iy = Math.floor(nose.y * dH);
-        const safeX = Math.max(0, Math.min(ix - 10, dW - 20));
-        const safeY = Math.max(0, Math.min(iy - 10, dH - 20));
-        const imgData = dctx.getImageData(safeX, safeY, 20, 20).data;
-
-        let sum = 0;
-        for (let i = 0; i < imgData.length; i += 4) sum += imgData[i];
-        const avg = sum / (imgData.length / 4);
-
-        out.textContent =
-          `Pitch: ${pitch.toFixed(1)}° Roll: ${roll.toFixed(1)}°\n顔: ${dir}\n距離指標: ${avg.toFixed(1)}`;
-        let msg = bent ? '首が曲がっています\n' : '首は自然です\n';
-        msg += avg < 50 ? '近すぎます' : avg > 200 ? '離れすぎています' : '適切な距離です';
-        warn.textContent = msg;
-        warn.style.color = (bent || avg < 50 || avg > 200) ? 'red' : 'green';
-      } catch (e) {
-        console.error("推論エラー:", e);
-      } finally {
-        processing = false;
-      }
-    }
-
-    document.getElementById('startBtn').onclick = async () => {
-      await initDepthAnything();
-      const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' } });
-      video.srcObject = stream;
-      await new Promise(r => video.onloadedmetadata = r);
-      canvas.width = 360;
-      canvas.height = 640;
-
-      new Camera(video, {
-        onFrame: async () => await faceMesh.send({ image: video }),
-        width: 640,
-        height: 360
-      }).start();
-
-      document.getElementById('startBtn').style.display = 'none';
-    };
-  </script>
-</body>
-</html>
+        const ix = Math.floor(nose.x * depthCanvas.width);
+        con
