--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>姿勢＋深度検出 完全版（深度表示あり）</h1>
+  <h1>姿勢＋深度検出 完全版（深度表示あり）2</h1>
   <button id="startBtn">開始</button>
   <div id="output">準備中...</div>
   <div id="warning"></div>
