--- a/index.html
+++ b/index.html
@@ -5,34 +5,19 @@
   <title>姿勢＋深度検出 完全版（深度表示あり）</title>
   <style>
     body {
-      font-size: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
+      font-size: 20px; display: flex; flex-direction: column;
+      align-items: center; justify-content: center;
+      height: 100vh; margin: 0; text-align: center;
     }
     #content {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
+      display: flex; gap: 10px; margin-top: 10px;
     }
-    video, canvas {
-      width: 360px;
-      height: 640px;
-      border: 1px solid #aaa;
+    video, canvas  {
+      width: 360px; height: 640px; border: 1px solid #aaa;
       transform: scaleX(-1);
     }
-    #output {
-      white-space: pre-line;
-      margin: 10px;
-    }
-    #warning {
-      font-size: 24px;
-      font-weight: bold;
-    }
+    #output { white-space: pre-line; margin: 10px; }
+    #warning { font-size: 24px; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -43,7 +28,7 @@
   <div id="content">
     <video id="video" autoplay playsinline muted></video>
     <canvas id="canvas"></canvas>
-    <canvas id="depthCanvas"></canvas>
+    <canvas id="depthCanvas"></canvas> <!-- ← 表示に変更 -->
   </div>
 
   <!-- ライブラリ読み込み -->
@@ -82,14 +67,12 @@
     const faceMesh = new FaceMesh({
       locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/${f}`
     });
-
     faceMesh.setOptions({
       maxNumFaces: 1,
       refineLandmarks: true,
       minDetectionConfidence: 0.5,
       minTrackingConfidence: 0.3
     });
-
     faceMesh.onResults(onFace);
 
     async function onFace(results) {
@@ -104,6 +87,7 @@
         }
         lastTimestamp = now;
 
+        // 顔未検出時の処理
         if (!results.multiFaceLandmarks || results.multiFaceLandmarks.length === 0) {
           out.textContent = `傾き: ${pitch.toFixed(1)}°, ${roll.toFixed(1)}°\n顔未検出`;
           warn.textContent = "顔が検出できません";
@@ -113,41 +97,9 @@
         }
 
         ctx.drawImage(results.image, 0, 0);
-
         const depthMap = await estimator.estimateDepth(video, { minDepth: 0, maxDepth: 1 });
-        const depthTensor = depthMap.depth;
-
-        const normalized = tf.tidy(() => {
-          const min = depthTensor.min();
-          const max = depthTensor.max();
-          return depthTensor.sub(min).div(max.sub(min)).mul(255).toInt();
-        });
-
-        const [w, h] = depthTensor.shape;
-        const depthArray = await normalized.data();
-
-        function jetColor(v) {
-          const t = v / 255;
-          const r = Math.floor(255 * Math.max(Math.min(1.5 - Math.abs(4 * t - 3), 1), 0));
-          const g = Math.floor(255 * Math.max(Math.min(1.5 - Math.abs(4 * t - 2), 1), 0));
-          const b = Math.floor(255 * Math.max(Math.min(1.5 - Math.abs(4 * t - 1), 1), 0));
-          return [r, g, b];
-        }
-
-        const imageData = dctx.createImageData(w, h);
-        for (let i = 0; i < depthArray.length; i++) {
-          const [r, g, b] = jetColor(depthArray[i]);
-          imageData.data[i * 4 + 0] = r;
-          imageData.data[i * 4 + 1] = g;
-          imageData.data[i * 4 + 2] = b;
-          imageData.data[i * 4 + 3] = 255;
-        }
-
-        depthCanvas.width = w;
-        depthCanvas.height = h;
-        dctx.putImageData(imageData, 0, 0);
-
-        tf.dispose([depthTensor, normalized]);
+        const depthImg = await depthMap.toCanvasImageSource();
+        dctx.drawImage(depthImg, 0, 0);  // ← 深度表示
 
         const lm = results.multiFaceLandmarks[0];
         const nose = lm[1], chin = lm[152];
